# opengl-on-wayland

./: CMakeLists.txt  LICENSE  README.md  main.c
